# plex-scripts

./: .checkov.yaml  .dclintrc  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  cliff.toml  pyproject.toml  sonar-project.properties
.claude/agents/: code-reviewer.md
.claude/rules/: cicd.md  docker.md  powershell.md  python.md  shell.md
.claude/skills/branch-cleanup/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/start-work/: SKILL.md
.github/: claude-code-instructions.md  copilot-instructions.md  dependabot.yml  image-service-map.json  labeler.yml  labels-hub.yml  labels-spoke.yml  pull_request_template.md  super-linter.env  sync-directives.yml
.github/ISSUE_TEMPLATE/: work-package.yml
.github/coverage/: inventory.toml  plex_scripts.toml  precommit.toml  testing.toml
.github/instructions/: cicd.instructions.md  code_review.instructions.md  data_management.instructions.md  development.instructions.md  devsecops_workflow.instructions.md  docker.instructions.md  infrastructure.instructions.md  python.instructions.md  task_assessment.instructions.md
.github/linters/: .jscpd.json  .markdownlint.yml  .powershell-psscriptanalyzer.psd1  .ruff.toml  .yaml-lint.yml  zizmor.yaml
.github/prompts/: problem-solving.prompt.md  rca.prompt.md
.github/workflows/: auto-labeler.yml  calver-tag.yml  issue-priority-triage.yml  labels-sync.yml  pre-commit.yml  pytest-coverage.yml  super-linter.yml  sync-directives-pull.yml  sync-directives-push.yml  update-summary.yml  validate-copilot-limits.yml
.sonarlint/: connectedMode.json
docs/ci/: automation-workflow-ruleset-guidance.md  checks-parity-matrix.md  local-checks-validation-checklist.md
docs/inventory/: homelab-environment-context.md
docs/repository-standards/: ai-batch-session-sop.md  cognitive-complexity-guide.md  devsecops-workflow.md  documentation-standards.md  git-branching.md  github-platform-standards.md  pre-commit-add-ons.md  priority-decision-framework.md
scripts/: __init__.py  copilot-context-health.conf  local_super_linter.sh  run_super_linter_hook.py  validate_context_limits.py
scripts/ci/: README.md  __init__.py  _decision_utils.py  backfill_issue_priorities.py  event_payload.py  image_service_map.py  keyword_labeler.py  merge_label_files.py  merge_precommit_config.py  parse_sync_targets.py  report_status_context.py  should_run_lint_traefik_swarm.py  sync_directives.py  sync_github_ruleset_export.py  triage_issue_priority.py  validate_precommit_config.py  write_changed_files.py
scripts/common/: __init__.py  encoding.py  git_runner.py  git_signing_utils.py  json_utils.py  paths.py  service_endpoints.py
scripts/context_validator/: __init__.py  config.py  git_utils.py  main.py  stats.py  utils.py  validator.py
scripts/dev/: __init__.py  bootstrap_venv.py  bootstrap_venv.sh  fetch_docs.py
scripts/devops/: __init__.py  calver.py  health_check_base.py  setup_git_signing.py  start_issue_work.py
scripts/edge/: bootstrap_secrets.sh  create_macvlan_networks.sh  create_macvlan_shims.sh  enable_crowdsec_wal.sh
scripts/github/: README.md  __init__.py  action_run_logs.py  cli_utils.py  conftest.py  create_pr_review.py  create_tag.py  dedupe_pr_review_replies.py  delete_branch.py  diff_required_status_contexts.py  fix_unsigned_commits.py  gh_api_call.py  gh_cli.py  issue_close.py  issue_fetch.py  issue_upsert.py  list_copilot_review_comments.py  list_issues.py  list_pr_commit_verifications.py  list_pr_review_comments.py  list_pr_review_comments_filtered.py  list_rulesets_required_contexts.py  list_ssh_signing_keys.py  list_unresolved_review_threads.py  pr_auto_summary.py  pr_close.py  pr_overview.py  pr_sync_issue_links.py  pr_upsert.py  refactor_open_issues_work_package.py  reply_and_resolve_review_comment.py  rulesets.py  sonarcloud_issues.py  test_pr_comment_access.py  triage_review_comments.py
scripts/inventory/: __init__.py  _nodes_yml_parsing.py  collect_node_inventory.py  generate_nodes_docs.py  generate_nodes_report_jsonc.py  inventory_types.py  nodes_yml.py  remote_probe.py  reporting.py  ssh_runner.py
scripts/linting/: __init__.py  _lint_utils.py  check_argparse_parser_names.py  check_bash_test_syntax.py  check_bound_ports.py  check_cognitive_complexity.py  check_compose_network_mode_conflicts.py  check_filename_conventions.py  check_init_docstrings.py  check_json_key_order.py  check_mermaid_diagrams.py  check_short_identifier_names.py  lint_compose.py  lint_swarm.py  run_super_linter.py  run_super_linter.sh  validate_heading_numbers.py  validate_service_sheets.py
scripts/precommit/: __init__.py  pytest_affected.py  run_if_exists.py  run_in_repo_venv.py  run_python
scripts/testing/: __init__.py  fixture_utils.py  stub_factories.py  validate_github_actions_architecture.py
scripts/truenas/: init_servarr_databases.sh  setup_container_dirs.sh  setup_secrets.sh
src/plex_scripts/: __init__.py
tests/: test_select_tmdb_poster.py  test_select_tmdb_poster_config.py  test_select_tmdb_poster_tui.py
(+192 files in other folders)
