# GitHub Copilot AI Template - Python Configuration
# Python 3.11+ required

[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm>=10.0.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-copilot-ai-template"
dynamic = ["version"]
description = "Template repository for GitHub Copilot AI projects"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.10,<1.0.0",
    "mypy>=1.20.0,<2.0.0",
    "types-PyYAML>=6.0.12.20260408",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.setuptools-scm]

[tool.coverage.run]
relative_files = true
omit = [
    "*/test_*.py",
    "*/tests/*",
    "*/conftest.py",
    "**/run_in_repo_venv.py",
    "**/remote_probe.py",
]

[tool.coverage.paths]
source = [
    "scripts",
    "*/repo-template/scripts",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "D",      # pydocstyle
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # Use ternary operator (readability preference)
    "D100",   # undocumented-public-module (phased rollout)
    "D101",   # undocumented-public-class (phased rollout)
    "D102",   # undocumented-public-method (phased rollout)
    "D103",   # undocumented-public-function (phased rollout)
    "D107",   # undocumented-public-init (phased rollout)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pylint.main]
# Disable pylint - ruff is the standard linter for this repository
ignore-patterns = [".*"]
