# Plex Scripts - Python Configuration
# Python 3.11+ required

[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-scripts"
dynamic = ["version"]
description = "Plex automation scripts for TMDB poster and art selection"
requires-python = ">=3.11"
dependencies = [
    "PlexAPI>=4.15.0",
    "urwid>=2.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=4.5.1",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "types-PyYAML>=6.0.12",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["plex_scripts*"]

[tool.setuptools-scm]

[tool.coverage.run]
relative_files = true
source = ["src/plex_scripts"]
omit = [
    "*/test_*.py",
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.paths]
source = [
    "src/plex_scripts",
    "*/plex-scripts/src/plex_scripts",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "D",      # pydocstyle
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # Use ternary operator (readability preference)
    "D100",   # undocumented-public-module (phased rollout)
    "D101",   # undocumented-public-class (phased rollout)
    "D102",   # undocumented-public-method (phased rollout)
    "D103",   # undocumented-public-function (phased rollout)
    "D107",   # undocumented-public-init (phased rollout)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["plex_scripts"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pylint.main]
# Disable pylint - ruff is the standard linter for this repository
ignore-patterns = [".*"]
